--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,10 +5,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  /* Light Theme Defaults */
   color-scheme: light;
-  color: #1f2937; /* slate-800 */
-  background-color: #f9fafb; /* slate-50 */
+  color: theme('colors.slate.800');
+  background-color: theme('colors.slate.50'); 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,9 +16,9 @@
   box-sizing: border-box;
 }
 
-.dark {
-  /* Dark Theme Overrides */
-  color-scheme: dark;
-  color: #d1d5db; /* gray-300 */
-  background-color: #111827; /* gray-900 */
+@media(prefers-color-scheme: dark) {
+  :root {
+    color: theme('colors.slate.300');
+    background-color: theme('colors.gray.900');
+  }
 }
